# provider-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  buf.gen.yaml  jitpack.yml
python/: .gitignore  CLAUDE.md  README.md  pyproject.toml
python/sdk/: pyproject.toml
python/sdk/src/t0_provider_sdk/: __init__.py  _version.py
python/sdk/src/t0_provider_sdk/api/buf/validate/: validate_pb2.py
python/sdk/src/t0_provider_sdk/api/ivms101/v1/ivms/: enum_pb2.py  enum_pb2.pyi  ivms101_pb2.py  ivms101_pb2.pyi
python/sdk/src/t0_provider_sdk/api/tzero/v1/common/: common_pb2.py  common_pb2.pyi  payment_method_pb2.py  payment_method_pb2.pyi  payment_receipt_pb2.py  payment_receipt_pb2.pyi
python/sdk/src/t0_provider_sdk/api/tzero/v1/payment/: network_connect.py  network_pb2.py  network_pb2.pyi  provider_connect.py  provider_pb2.py  provider_pb2.pyi
python/sdk/src/t0_provider_sdk/api/tzero/v1/payment_intent/: beneficiary_connect.py  beneficiary_pb2.py  beneficiary_pb2.pyi  network_connect.py  network_pb2.py  network_pb2.pyi  pay_in_provider_connect.py  pay_in_provider_pb2.py  pay_in_provider_pb2.pyi
python/sdk/src/t0_provider_sdk/api/tzero/v1/payment_intent/provider/: provider_connect.py  (+2 more)
python/sdk/src/t0_provider_sdk/api/tzero/v1/system/: system_connect.py  system_pb2.py  system_pb2.pyi
python/sdk/src/t0_provider_sdk/common/: __init__.py  headers.py
python/sdk/src/t0_provider_sdk/crypto/: __init__.py  hash.py  keys.py  signer.py  verifier.py
python/sdk/src/t0_provider_sdk/network/: __init__.py  client.py  options.py  signing.py  validate_request.py
python/sdk/src/t0_provider_sdk/provider/: __init__.py  errors.py  handler.py  interceptor.py  middleware.py  middleware_wsgi.py  system.py  validate.py  validate_response.py
python/sdk/tests/crypto/: test_cross_vectors.py  test_hash.py  test_keys.py  test_signer.py  test_verifier.py
python/sdk/tests/integration/: test_signature_verification.py  test_signature_verification_wsgi.py  test_system_signed.py
python/sdk/tests/network/: test_signing.py
python/sdk/tests/provider/: test_middleware.py  test_middleware_wsgi.py  test_system.py  test_validate.py  test_validation.py
python/starter/: pyproject.toml
python/starter/src/t0_provider_starter/: __init__.py  cli.py  keygen.py
python/starter/src/t0_provider_starter/template/: .env.example  Dockerfile  README.md  pyproject.toml.template
python/starter/src/t0_provider_starter/template/src/provider/: config.py  confirm_funds_received.py  create_payment_intent.py  get_payment_intent_quote.py  get_quote.py  main.py  publish_payment_intent_quotes.py  publish_quotes.py
python/starter/src/t0_provider_starter/template/src/provider/handler/: payment.py  payment_intent_beneficiary.py  payment_intent_beneficiary_sync.py  payment_intent_pay_in.py  payment_intent_pay_in_sync.py  payment_sync.py
python/tests/cross_test/: test_cross_server.py  test_cross_server_sync.py  test_cross_signature.py
python/tests/cross_test/go_helper/: go.mod  go.sum  main.go
(+264 files in other folders)
