[project]
name = "provider-python"
version = "0.0.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["sdk", "starter"]

[tool.pytest.ini_options]
testpaths = ["sdk/tests", "starter/tests", "tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "protoc-gen-connect-python>=0.8.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.40.0",
]
