[project]
name = "t0-provider-sdk"
version = "1.1.14"
requires-python = ">=3.13"
description = "T-0 Network Provider SDK for Python"
license = "MIT"
authors = [
    { name = "T-0 Network" },
]
dependencies = [
    "connect-python>=0.9",
    "protobuf>=7.34.1",
    "coincurve>=21.0",
    "pycryptodome>=3.23",
    "protovalidate>=0.3",
]

[project.urls]
Repository = "https://github.com/t-0-network/provider-sdk"
Homepage = "https://github.com/t-0-network/provider-sdk"
Organization = "https://pypi.org/org/t0-network/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t0_provider_sdk"]
